--- a/udns-0.4/Makefile
+++ b/udns-0.4/Makefile
@@ -22,6 +22,10 @@
 NAME   = udns
 VERS   = 0.4
 SOVER  = 0
+ARCH	= x86_64
+ifdef arch
+	ARCH:=$(arch)
+endif
 
 SRCS   = udns_dn.c udns_dntosp.c udns_parse.c udns_resolver.c udns_init.c \
 	udns_misc.c udns_XtoX.c \
@@ -48,7 +52,16 @@ SOUTILS = $(USRCS:.c=_s)
 NAMEPFX = $(NAME)-$(VERS)
 
 CC = gcc
-CFLAGS = -m64 -Wall -W -O2 -pipe
+CFLAGS = -Wall -W -O2 -pipe
+
+ifeq ($(ARCH),x86_64)
+	CFLAGS := -m64 $(CFLAGS)
+endif
+
+ifeq ($(ARCH), i386)
+	CFLAGS := -m32 $(CFLAGS)
+endif
+
 CDEFS = -DHAVE_CONFIG_H
 LD = $(CC)
 LDFLAGS = 
