--- a/udns-0.4/armv7a/Makefile
+++ b/udns-0.4/armv7a/Makefile
@@ -20,13 +20,8 @@
 # write to the Free Software Foundation, Inc., 59 Temple Place,
 # Suite 330, Boston, MA  02111-1307  USA
 
-ifdef arch
-	PRJ_ARCH :=$(arch)
-else
-	PRJ_ARCH := x86_64
-endif
 
-
+NAME   = udns
 VERS   = 0.4
 SOVER  = 0
 
@@ -55,19 +50,11 @@ SOUTILS = $(USRCS:.c=_s)
 NAMEPFX = $(NAME)-$(VERS)
 
 
-CFLAGS = -m64 -Wall -W -O2 -pipe
-
-
 CDEFS = -DHAVE_CONFIG_H
-CC = gcc
 
-
-
-ifeq ($(PRJ_ARCH),armv7a)
-	CC := armv7-rpi2-linux-gnueabihf-gcc
-	AR := armv7-rpi2-linux-gnueabihf-ar
-	CFLAGS := -m32 -Wall -W -O2 -pipe
-endif
+CC := armv7-rpi2-linux-gnueabihf-gcc
+AR := armv7-rpi2-linux-gnueabihf-ar
+CFLAGS := -Wall -W -O2 -pipe
 
 LD = $(CC)
 LDFLAGS = 
